--- a/shows.html
+++ b/shows.html
@@ -102,8 +102,7 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.cityline.com/Events.html"
-                                class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.cityline.com/Events.html" class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
@@ -132,30 +131,17 @@
                         <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
                         <div class="together"> <a
                                 href="https://www.amazon.co.uk/Seitsem%C3%A4n-veljest%C3%A4-Aleksis-Kivi/dp/1484085876">
-                                <h3>Seitsemän veljestä
-                                </h3>
-                                <span>✍️Aleksis Kiven
-                                </span>
-                                <p>Hinta: <b>20.13 €</b></p>
+                                <h3>TOMORROW X TOGETHER WORLD TOUR <ACT:PROMISE> IN MACAU </h3>
+                                <span>📍Galaxy Macau</span>
+                                <p>📅30th-31st August 2024</p>
                             </a>
-                            <p>Klassinen tarina seitsemästä veljestä ja heidän seikkailuistaan.</p>
-                            <div class="view">
-                                <button class="toggle_btn">Katso lisää</button>
-                                <div class="content" style="display: none;">
-                                    <p>Tämä rakas suomalainen klassikko kertoo seitsemästä kurittomasta veljestä, jotka
-                                        jättävät
-                                        kotinsa paeta yhteiskunnallisia paineita. Heidän matkansa erämaan halki on
-                                        täynnä
-                                        humoristisia ja haastavia kohtaamisia, jotka johtavat lopulta henkilökohtaiseen
-                                        kasvuun ja
-                                        sovintoon yhteisönsä kanssa.
-                                    </p>
-                                </div>
-                            </div>
+                            <p>TOMORROW X TOGETHER, featuring SOOBIN, YEONJUN, BEOMGYU, TAEHYUN, and
+                                HUENINGKAI, have cemented their status as Gen Z icons with a powerful soundtrack that
+                                captures the shared experiences and emotions of today’s generation.</p>
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.amazon.co.uk/Seitsem%C3%A4n-veljest%C3%A4-Aleksis-Kivi/dp/1484085876"
-                                class="button_main">Osta nyt</a>
+                                class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
