--- a/shows.html
+++ b/shows.html
@@ -130,7 +130,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.amazon.co.uk/Seitsem%C3%A4n-veljest%C3%A4-Aleksis-Kivi/dp/1484085876">
+                                href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/">
                                 <h3>TOMORROW X TOGETHER WORLD TOUR <ACT:PROMISE> IN MACAU </h3>
                                 <span>📍Galaxy Macau</span>
                                 <p>📅30th-31st August 2024</p>
@@ -140,7 +140,7 @@
                                 captures the shared experiences and emotions of today’s generation.</p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.amazon.co.uk/Seitsem%C3%A4n-veljest%C3%A4-Aleksis-Kivi/dp/1484085876"
+                            <a href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
