--- a/shows.html
+++ b/shows.html
@@ -149,26 +149,22 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
                         <div class="together"> <a href="https://www.suomalainen.com/products/jaa-2">
-                                <h3>Jää
+                                <h3>2024 (G)I-DLE WORLD TOUR [iDOL] IN MACAU
                                 </h3>
-                                <span>✍️Ulla-Lena Lundbergin</span>
-                                <p>Hinta: <b>13,95 €</b></p>
+                                <span>📍Galaxy Macau</span>
+                                <p>📅25-27 October 2024</p>
                             </a>
-                            <p>Mukaansatempaava seikkailu Suomen saaristoon.
+                            <p>(G)I-DLE, comprised of MIYEON, MINNIE, SOYEON, YUQI, and SHUHUA, made a
+                                remarkable debut in May 2018 with their hit song "LATATA," quickly gaining acclaim and
+                                winning seven "Best New Artist" awards. Known as one of the most high-profile girl
+                                groups,
+                                they continued their success in 2022 with chart-topping hits like "TOMBOY," "Nxde," and
+                                the
+                                highly addictive "Queencard," which topped global charts.
                             </p>
-                            <div class="view">
-                                <button class="toggle_btn">Katso lisää</button>
-                                <div class="content" style="display: none;">
-                                    <p>"Jää" seuraa nuoren papin ja hänen perheensä elämää, jotka muuttavat syrjäiselle
-                                        saarelle
-                                        Suomen saaristoon. Romaani vangitsee kauniisti ankaran ja upean ympäristön sekä
-                                        yhteisön kamppailut ja voitot vaihtelevien vuodenaikojen taustalla.
-                                    </p>
-                                </div>
-                            </div>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.suomalainen.com/products/jaa-2" class="button_main">Osta nyt</a>
+                            <a href="https://www.suomalainen.com/products/jaa-2" class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
