--- a/shows.html
+++ b/shows.html
@@ -148,7 +148,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
-                        <div class="together"> <a href="https://www.suomalainen.com/products/jaa-2">
+                        <div class="together"> <a href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/">
                                 <h3>2024 (G)I-DLE WORLD TOUR [iDOL] IN MACAU
                                 </h3>
                                 <span>📍Galaxy Macau</span>
@@ -164,7 +164,7 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.suomalainen.com/products/jaa-2" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/" class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
