--- a/shows.html
+++ b/shows.html
@@ -148,7 +148,8 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
-                        <div class="together"> <a href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/">
+                        <div class="together"> <a
+                                href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/">
                                 <h3>2024 (G)I-DLE WORLD TOUR [iDOL] IN MACAU
                                 </h3>
                                 <span>📍Galaxy Macau</span>
@@ -164,7 +165,8 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/"
+                                class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
@@ -173,31 +175,19 @@
                         <div class="img_transition"><img src="image/pubdistus.webp" alt="thessa"></div>
                         <div class="together"> <a
                                 href="https://www.suomalainen.com/products/puhdistus-2?queryId=5cc195dfce91c8f90cf57d70d9b647d5&amp;objectId=48453940052303">
-                                <h3>Puhdistus
-
+                                <h3>2024 THE BOYZ WORLD TOUR : ZENERATION II in MACAU
                                 </h3>
-                                <span>✍️Sofi Oksasen
-                                </span>
-                                <p>Hinta: <b>44,95 €</b></p>
+                                <span>📍Studio City Event Center</span>
+                                <p>📅31 August-1 September 2024</p>
                             </a>
-                            <p>Tarina selviytymisestä ja vastarinnasta Viron neuvostomiehityksen aikana.
-
-                            </p>
-                            <div class="view">
-                                <button class="toggle_btn">Katso lisää</button>
-                                <div class="content" style="display: none;">
-                                    <p>Tämä voimakas romaani kietoutuu kahden naisen, Aliiden ja Zaran, elämän eri
-                                        sukupolvien
-                                        kesken. Se tutkii sorron, selviytymisen ja neuvostoajan kummittelevan perinnön
-                                        teemoja
-                                        Virossa paljastaen syviä henkilökohtaisia ja historiallisia arpia.
-                                    </p>
-                                </div>
-                            </div>
+                            <p>The boyz world tour visits the Studio City Event Centre and promises to be one of the
+                                most
+                                memorable concerts of the year. Showcasing chart topping hits this show isn't to be
+                                missed.</p>
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.suomalainen.com/products/puhdistus-2?queryId=5cc195dfce91c8f90cf57d70d9b647d5&amp;objectId=48453940052303"
-                                class="button_main">Osta nyt</a>
+                                class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
