--- a/shows.html
+++ b/shows.html
@@ -174,7 +174,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/pubdistus.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.suomalainen.com/products/puhdistus-2?queryId=5cc195dfce91c8f90cf57d70d9b647d5&amp;objectId=48453940052303">
+                                href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f">
                                 <h3>2024 THE BOYZ WORLD TOUR : ZENERATION II in MACAU
                                 </h3>
                                 <span>📍Studio City Event Center</span>
@@ -186,7 +186,7 @@
                                 missed.</p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.suomalainen.com/products/puhdistus-2?queryId=5cc195dfce91c8f90cf57d70d9b647d5&amp;objectId=48453940052303"
+                            <a href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
