--- a/shows.html
+++ b/shows.html
@@ -195,33 +195,18 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/mikael.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.suomalainen.com/products/mikael-hakim-3?queryId=f76604f4b938b8aa32aea73aa2d85035&amp;objectId=39754231545945">
-                                <h3>Mikael Karvajalka
-                                </h3>
-                                <span>✍️Mika Waltarin
+                                href="https://www.londonermacao.com/macau-events-shows/linfeng-2024.html#:~:text=Famous%20Hong%20Kong%20singer%20and,and%2013%2D15%2C%202024.">
+                                <h3>Raymond Lam Concert 2024 | Love Flows LF Live 2024</h3>
+                                <span>📍The Londoner Macau
                                 </span>
-                                <p>Hinta: <b>14,95 €</b></p>
+                                <p>📅7-8 September,13-15 September 2024</p>
                             </a>
-                            <p>Seuraa Mikael Karvajalkan renessanssin seikkailuja.
-
-                            </p>
-                            <div class="view">
-                                <button class="toggle_btn">Katso lisää</button>
-                                <div class="content" style="display: none;">
-                                    <p>Renessanssin myrskyisälle ajalle sijoittuva romaani seuraa nuoren suomalaisen
-                                        Mikael
-                                        Karvajalkan seikkailuja. Hänen matkansa vievät hänet ympäri Eurooppaa, missä hän
-                                        kohtaa
-                                        lukemattomia historiallisia henkilöitä ja tapahtumia, jotka tarjoavat elävän
-                                        kuvauksen
-                                        aikakaudesta.
-                                    </p>
-                                </div>
-                            </div>
+                            <p>Raymond Lam brings his Love Flows show the the Londoner Macau for a selection of shows
+                                in September 2024. Dont miss out on one of the most iconic shows in Macau this year</p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.suomalainen.com/products/mikael-hakim-3?queryId=f76604f4b938b8aa32aea73aa2d85035&amp;objectId=39754231545945"
-                                class="button_main">Osta nyt</a>
+                            <a href="https://www.londonermacao.com/macau-events-shows/linfeng-2024.html#:~:text=Famous%20Hong%20Kong%20singer%20and,and%2013%2D15%2C%202024."
+                                class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
