--- a/shows.html
+++ b/shows.html
@@ -214,38 +214,19 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.suomalainen.com/collections/kirjailija-juha-vuorinen/products/puerto-anus">
-                                <h3>Puerto Anus</h3>
-                                <span>✍️Juha Vuorisen
-                                </span>
-                                <p>Hinta: <b>18,95 €
-                                    </b></p>
+                                href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef">
+                                <h3>Stray Kids Concert 2024 Macau｜Stray Kids World Tour
+                                </h3>
+                                <span>📍Galaxy Macau</span>
+                                <p>📅29-30 November</p>
                             </a>
-                            <p>Tumma komedia sijoittuu pahamaineiseen espanjalaiseen satamakaupunkiin.</p>
-                            <div class="view">
-                                <button class="toggle_btn">Katso lisää</button>
-                                <div class="content" style="display: none;">
-                                    <p>Juha Vuorisen "Puerto Anus" on synkän koominen romaani, joka vie lukijat
-                                        pahamaineisen
-                                        espanjalaisen satamakaupungin kaoottiseen ja usein törkeään maailmaan. Villistä
-                                        yöelämästään ja omalaatuisista asukkaistaan tunnettu Puerto Anus on taustana
-                                        lukuisille
-                                        seikkailuille ja kieroutuneelle huumorille. Vuorisen terävä nokkeluus ja
-                                        horjumaton satiiri
-                                        maalaavat elävän kuvan kaupungin omituisista hahmoista epäilyttävästä
-                                        paikallisesta
-                                        hämmentyneeseen turistiin. Romaanissa käsitellään liiallisuuden, typeryyden ja
-                                        ihmisten
-                                        käyttäytymisen absurdiuden teemoja, joten se on kiehtovaa ja viihdyttävää
-                                        luettavaa niille,
-                                        jotka arvostavat synkkää huumoria ja sosiaalista satiiria
-                                    </p>
-                                </div>
-                            </div>
+                            <p>Stray Kids headline the galaxy theatre Macau with their eagerly awaited world tour
+                            </p>
+
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.suomalainen.com/collections/kirjailija-juha-vuorinen/products/puerto-anus"
-                                class="button_main">Osta nyt</a>
+                            <a href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef"
+                                class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
