--- a/shows.html
+++ b/shows.html
@@ -247,7 +247,131 @@
             </div>
         </div>
     </section>
-
+    <div class="hotel_accordian">
+        <div class="container">
+            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <h2 class="mb-4">FAQ'S</h2>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingOne">
+                        <h4 class="panel-title">
+                            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
+                                aria-expanded="false" aria-controls="collapseOne">
+                                Mi az a fantasy sport?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
+                        aria-labelledby="headingOne">
+                        <div class="panel-body">
+                            A fantáziasportok magukban foglalják egy virtuális csapat létrehozását valós sportolókból,
+                            és
+                            a valós játékokon nyújtott tényleges teljesítményük alapján versenyeznek. A pontokat a
+                            játékosok statisztikái és eredményei alapján szerzik.</div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingTwo">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                                href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Hogyan kezdjek hozzá a Fantazia Fociihoz?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                        <div class="panel-body">
+                            A kezdéshez regisztráljon egy fiókot, hozzon létre fantáziacsapatot, és csatlakozzon egy
+                            ligához. Miután összeállította csapatát, kezelje összeállítását, és kövesse nyomon játékosai
+                            teljesítményét a szezon során.
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingThree">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                                href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Van csatlakozási díj?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
+                        aria-labelledby="headingThree">
+                        <div class="panel-body">
+                            Az alapvető részvétel általában ingyenes. A választott versenyektől vagy ligáktól függően
+                            azonban lehetnek prémium szolgáltatások vagy bajnokság nevezési díjai.</div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingfour">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                                href="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
+                                Hogyan történik a pontszerzés?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapsefour" class="panel-collapse collapse" role="tabpanel"
+                        aria-labelledby="headingfour">
+                        <div class="panel-body">
+                            A pontokat a csapatod játékosainak valós teljesítménye alapján ítélik oda, például gólok,
+                            gólpasszok és védekező akciók. Részletes információkért tekintse meg oldalunk pontozási
+                            rendszerét.</div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingfive">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                                href="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
+                                Változtathatok-e a csapatomban a draft után?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapsefive" class="panel-collapse collapse" role="tabpanel"
+                        aria-labelledby="headingfive">
+                        <div class="panel-body">
+                            Igen, változtathatsz a névsoron a szezon során, például új játékosok felvételére, cserékre
+                            és
+                            a felállás módosítására.</div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingsix">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                                href="#collapsesix" aria-expanded="false" aria-controls="collapsesix">
+                                Milyen gyakran frissítik a játékos statisztikákat?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapsesix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingsix">
+                        <div class="panel-body">
+                            A játékos statisztikák valós időben frissülnek, vagy röviddel a meccsek befejezése után.
+                            Tekintse meg a webhelyet a legfrissebb frissítésekért és a pontos pontszámokért.
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingseven">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                                href="#collapseseven" aria-expanded="false" aria-controls="collapseseven">
+                                Mi történik, ha a csapatom egyik játékosa megsérül?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseseven" class="panel-collapse collapse" role="tabpanel"
+                        aria-labelledby="headingseven">
+                        <div class="panel-body">
+                            Ha a csapatod egyik játékosa megsérül, a bajnokság szabályaitól függően lecserélheted egy
+                            másik játékosra a kispadodról vagy a szabadügynök-készletből.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- below section start -->
     <div class="below">
         <div class="container">
