--- a/shows.html
+++ b/shows.html
@@ -247,6 +247,7 @@
             </div>
         </div>
     </section>
+    <!-- accordian section start -->
     <div class="hotel_accordian">
         <div class="container">
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -256,17 +257,14 @@
                         <h4 class="panel-title">
                             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
                                 aria-expanded="false" aria-controls="collapseOne">
-                                Mi az a fantasy sport?
-                            </a>
+                                What types of events can I find on TicketsMacau?</a>
                         </h4>
                     </div>
                     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
                         aria-labelledby="headingOne">
                         <div class="panel-body">
-                            A fantáziasportok magukban foglalják egy virtuális csapat létrehozását valós sportolókból,
-                            és
-                            a valós játékokon nyújtott tényleges teljesítményük alapján versenyeznek. A pontokat a
-                            játékosok statisztikái és eredményei alapján szerzik.</div>
+                            You can find a wide range of events, including concerts, theatrical performances, casino
+                            tournaments, and cultural tours, all hosted in Macau’s premier venues.</div>
                     </div>
                 </div>
                 <div class="panel panel-default">
