--- a/shows.html
+++ b/shows.html
@@ -272,15 +272,15 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Hogyan kezdjek hozzá a Fantazia Fociihoz?
+                                How can I purchase tickets for events?
                             </a>
                         </h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                         <div class="panel-body">
-                            A kezdéshez regisztráljon egy fiókot, hozzon létre fantáziacsapatot, és csatlakozzon egy
-                            ligához. Miután összeállította csapatát, kezelje összeállítását, és kövesse nyomon játékosai
-                            teljesítményét a szezon során.
+                            Tickets can be purchased through our site by following the event links to the respective
+                            ticKeting platforms or directly through event organizers.
+
                         </div>
                     </div>
                 </div>
@@ -289,15 +289,17 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Van csatlakozási díj?
+                                Are event details and schedules always up-to-date?
+
                             </a>
                         </h4>
                     </div>
                     <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingThree">
                         <div class="panel-body">
-                            Az alapvető részvétel általában ingyenes. A választott versenyektől vagy ligáktól függően
-                            azonban lehetnek prémium szolgáltatások vagy bajnokság nevezési díjai.</div>
+                            We strive to provide accurate and current information, but event details and schedules may
+                            change. We recommend checking directly with the event organizers for the latest updates.
+                        </div>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -305,16 +307,16 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                                Hogyan történik a pontszerzés?
+                                Can I get a refund if I can’t attend an event?
                             </a>
                         </h4>
                     </div>
                     <div id="collapsefour" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingfour">
                         <div class="panel-body">
-                            A pontokat a csapatod játékosainak valós teljesítménye alapján ítélik oda, például gólok,
-                            gólpasszok és védekező akciók. Részletes információkért tekintse meg oldalunk pontozási
-                            rendszerét.</div>
+                            Refund policies vary by event and ticketing provider. Please review the terms and conditions
+                            at the time of purchase and contact the ticketing provider for assistance with refunds or
+                            exchanges.</div>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -322,48 +324,15 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
-                                Változtathatok-e a csapatomban a draft után?
+                                How do I find out about new events and updates?
                             </a>
                         </h4>
                     </div>
                     <div id="collapsefive" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingfive">
                         <div class="panel-body">
-                            Igen, változtathatsz a névsoron a szezon során, például új játékosok felvételére, cserékre
-                            és
-                            a felállás módosítására.</div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="headingsix">
-                        <h4 class="panel-title">
-                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                                href="#collapsesix" aria-expanded="false" aria-controls="collapsesix">
-                                Milyen gyakran frissítik a játékos statisztikákat?
-                            </a>
-                        </h4>
-                    </div>
-                    <div id="collapsesix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingsix">
-                        <div class="panel-body">
-                            A játékos statisztikák valós időben frissülnek, vagy röviddel a meccsek befejezése után.
-                            Tekintse meg a webhelyet a legfrissebb frissítésekért és a pontos pontszámokért.
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="headingseven">
-                        <h4 class="panel-title">
-                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                                href="#collapseseven" aria-expanded="false" aria-controls="collapseseven">
-                                Mi történik, ha a csapatom egyik játékosa megsérül?
-                            </a>
-                        </h4>
-                    </div>
-                    <div id="collapseseven" class="panel-collapse collapse" role="tabpanel"
-                        aria-labelledby="headingseven">
-                        <div class="panel-body">
-                            Ha a csapatod egyik játékosa megsérül, a bajnokság szabályaitól függően lecserélheted egy
-                            másik játékosra a kispadodról vagy a szabadügynök-készletből.
+                            Stay updated by subscribing to our newsletter or following our social media channels for the
+                            latest news and announcements on upcoming events in Macau.
                         </div>
                     </div>
                 </div>
