--- a/exhibitions.html
+++ b/exhibitions.html
@@ -90,7 +90,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/">
+                                href="https://www.londonermacao.com/macau-events-shows/harry-potter-exhibition.html?_ga=2.61142892.1132260017.1723028193-993384100.1723028193">
                                 <h3>Harry Potter™: The Exhibition
                                 </h3>
                                 <span>📍The Venetian Macau</span>
@@ -101,10 +101,12 @@
                                 moments, characters, locations, and magical creatures from the Harry Potter™ film series
                                 and
                                 the Wizarding World. Featuring state-of-the-art design and cutting-edge technology, this
-                                exhibition enchants visitors with authentic props, costumes, and immersive storytelling.</p>
+                                exhibition enchants visitors with authentic props, costumes, and immersive storytelling.
+                            </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.cityline.com/Events.html" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.londonermacao.com/macau-events-shows/harry-potter-exhibition.html?_ga=2.61142892.1132260017.1723028193-993384100.1723028193"
+                                class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
@@ -112,18 +114,20 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/">
-                                <h3>René [Final Call] 2024 Live Tour-Macau</h3>
-                                <span>📍Galaxy Macau</span>
-                                <p>📅17th August 2024</p>
+                                href="https://en.sandsresortsmacao.com/sands-lifestyle/macau-shows/teamlab.html?_gl=1*1chmzqk*_gcl_au*NjUwMTE5ODgyLjE3MjMwMjgxOTI.*_ga*OTkzMzg0MTAwLjE3MjMwMjgxOTM.*_ga_H84668JQMV*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.*_ga_CCKE5Z3T7T*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.&_ga=2.52853864.1132260017.1723028193-993384100.1723028193">
+                                <h3>TeamLab - SuperNature Macao</h3>
+                                <span>📍The Venetian Macau</span>
+                                <p>📅 Daily</p>
                             </a>
-                            <p>René Liu, the Diva of Arts, will extend her stunning 2023 Final Call World Tour into
-                                2024,
-                                introducing the Final Call World Tour with an all-encompassing stage experience.
+                            <p>TeamLab SuperNature is an expansive, three-dimensional interactive experience covering
+                                5,000 square meters, featuring massive 8-meter-tall installations by the art collective
+                                teamLab. This "body immersive" museum focuses on a series of artworks designed to
+                                explore fresh perspectives on the world and the interconnectedness between humanity and
+                                nature.
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/"
+                            <a href="https://en.sandsresortsmacao.com/sands-lifestyle/macau-shows/teamlab.html?_gl=1*1chmzqk*_gcl_au*NjUwMTE5ODgyLjE3MjMwMjgxOTI.*_ga*OTkzMzg0MTAwLjE3MjMwMjgxOTM.*_ga_H84668JQMV*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.*_ga_CCKE5Z3T7T*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.&_ga=2.52853864.1132260017.1723028193-993384100.1723028193"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
