--- a/exhibitions.html
+++ b/exhibitions.html
@@ -136,17 +136,22 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/">
-                                <h3>TOMORROW X TOGETHER WORLD TOUR <ACT:PROMISE> IN MACAU </h3>
-                                <span>📍Galaxy Macau</span>
-                                <p>📅30th-31st August 2024</p>
+                                href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition">
+                                <h3>MGM X Ren Zhe – “Legends of Chivalry” Art Exhibition</h3>
+                                <span>📍MGM Cotai</span>
+                                <p>📅 Daily</p>
                             </a>
-                            <p>TOMORROW X TOGETHER, featuring SOOBIN, YEONJUN, BEOMGYU, TAEHYUN, and
-                                HUENINGKAI, have cemented their status as Gen Z icons with a powerful soundtrack that
-                                captures the shared experiences and emotions of today’s generation.</p>
+                            <p>MGM collaborates with acclaimed contemporary Chinese artist Ren Zhe to present an art
+                                exhibition themed "Legends of Chivalry." This showcase features a diverse collection of
+                                the
+                                artist’s sculptural masterpieces depicting classic wuxia characters. Embracing the
+                                spirit of
+                                "Strive in the Spirit of the Lion & Chivalry" from the Wuxia world, MGM is dedicated to
+                                innovatively preserving Chinese culture through unique and contemporary art experiences.
+                            </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/"
+                            <a href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
